--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
           ls
           env
-          zip ${{env.NAME_BATGADGET}}.zip ${{env.NAME_BATGADGET}}.${{BATGADGET_EXTENSION}}
+          zip ${{ env.NAME_BATGADGET }}.zip ${{ env.NAME_BATGADGET }}.${{ env.BATGADGET_EXTENSION }}
           ls
 
     - name: Create Release
